recyclerview with firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">me-android</string>
+    <string name="app_name">Android Test</string>
+    <string name="update">Update</string>
 </resources>
