--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Android Test</string>
+    <string name="add">ADD</string>
     <string name="update">Update</string>
 </resources>
